[tool.poetry]
name = "coure-work-4"
version = "0.1.0"
description = ""
authors = ["Sergei <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
datetime = "^5.2"
aiogram = "2.23.1"
xlsxwriter = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
